Add Weapon class

--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProiectMC.cpp" />
+    <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
