--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="player.cppm" />
     <ClCompile Include="ProiectMC.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="weapon.cppm" />
@@ -155,8 +156,6 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="Map.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
