--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="map.cppm" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="player.cppm" />
     <ClCompile Include="ProiectMC.cpp" />
@@ -155,7 +156,6 @@
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="GameSession.h" />
-    <ClInclude Include="Map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
