--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -146,16 +146,16 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
-    <ClCompile Include="map.cppm" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="player.cppm" />
     <ClCompile Include="ProiectMC.cpp" />
     <ClCompile Include="Weapon.cpp" />
-    <ClCompile Include="weapon.cppm" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="GameSession.h" />
+    <ClInclude Include="map.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
