--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bomb.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="map.h" />
