--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -158,9 +158,11 @@
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Event.h" />
+    <ClInclude Include="GameEndEvent.h" />
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerEliminatedEvent.h" />
     <ClInclude Include="PowerUpEvent.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
