--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj.filters
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj.filters
@@ -71,5 +71,11 @@
     <ClInclude Include="PowerUpEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerEliminatedEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEndEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
