--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -145,13 +145,11 @@
   <ItemGroup>
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="ConsoleApplication.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProiectMC.cpp" />
-    <ClCompile Include="utils.cpp" />
-    <ClCompile Include="utils.cppm" />
+    <ClCompile Include="Server.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
