--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="SQLDataBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DBPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DBPlayerHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DBPlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
