--- a/ProiectMC/ProiectMC/ProiectMC.vcxproj
+++ b/ProiectMC/ProiectMC/ProiectMC.vcxproj
@@ -149,9 +149,12 @@
   <ItemGroup>
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="GameEndEvent.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerEliminatedEvent.cpp" />
+    <ClCompile Include="PowerUpEvent.cpp" />
     <ClCompile Include="ProiectMC.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
