Add DataBase objects and PlayerDAO

--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
@@ -127,12 +127,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DBBuilding.cpp" />
+    <ClCompile Include="DBGame.cpp" />
+    <ClCompile Include="DBGameBuilding.cpp" />
+    <ClCompile Include="DBGamePlayer.cpp" />
     <ClCompile Include="DBPlayer.cpp" />
     <ClCompile Include="DBPlayerHandler.cpp" />
-    <ClCompile Include="SQLDataBase.cpp" />
+    <ClCompile Include="DBRegion.cpp" />
+    <ClCompile Include="PlayerDAO.cpp" />
+    <ClCompile Include="SQLliteDataBase.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DBBuilding.h" />
+    <ClInclude Include="DBGame.h" />
+    <ClInclude Include="DBGameBuilding.h" />
+    <ClInclude Include="DBGamePlayer.h" />
     <ClInclude Include="DBPlayer.h" />
+    <ClInclude Include="DBRegion.h" />
+    <ClInclude Include="PlayerDAO.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
