Add methods in PlayerDAO for insert,find and findbyid

--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="DBRegion.cpp" />
     <ClCompile Include="PlayerDAO.cpp" />
     <ClCompile Include="SQLliteDataBase.cpp" />
+    <ClCompile Include="TestDB.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBBuilding.h" />
