--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="PlayerDAO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBPlayer.h">
