--- a/ProiectMC/Client/Client.vcxproj
+++ b/ProiectMC/Client/Client.vcxproj
@@ -113,6 +113,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <EnableModules>true</EnableModules>
       <BuildStlModules>true</BuildStlModules>
+      <AdditionalIncludeDirectories>$(ProjectDir)include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,6 +143,7 @@
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="src\Bomb.cpp" />
     <ClCompile Include="src\Bullet.cpp" />
+    <ClCompile Include="src\ClientFunctions.cpp" />
     <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Weapon.cpp" />
@@ -149,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="include\Bomb.h" />
     <ClInclude Include="include\Bullet.h" />
+    <ClInclude Include="include\ClientFunctions.h" />
     <ClInclude Include="include\map.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Weapon.h" />
