--- a/ProiectMC/Client/Client.vcxproj.filters
+++ b/ProiectMC/Client/Client.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Weapon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ClientFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\map.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Weapon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ClientFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
