--- a/ProiectMC/Server/Server.vcxproj.filters
+++ b/ProiectMC/Server/Server.vcxproj.filters
@@ -27,13 +27,10 @@
     <ClCompile Include="src\PowerUpEvent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ProiectMC.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ActiveClientGuard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Server.cpp">
+    <ClCompile Include="src\Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
